Added Profile Image and Password Update Feature